--- a/EProjet.NETCore/Views/Recipe/upload_recipe.cshtml
+++ b/EProjet.NETCore/Views/Recipe/upload_recipe.cshtml
@@ -3,14 +3,19 @@
 *@
 @{
 }
+@model EProjet.NETCore.Models.Recipe
+
 @section Styles {
     <link rel="stylesheet" href="~/css/upload_recipe.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.20/summernote-lite.min.css" integrity="sha512-ZbehZMIlGA8CTIOtdE+M81uj3mrcgyrh6ZFeG33A4FHECakGrOsTPlPQ8ijjLkxgImrdmSVUHn1j+ApjodYZow==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 }
 <div class="user-add">
     <div class="add_main_form">
+      
         <h1 class="title">Share Your Recipes</h1>
-        <form action="">
+        <form asp-controller="Recipe" asp-action="UploadRecipe" method="post" enctype="multipart/form-data" id="uploadForm">
+            <input type="hidden" name="guid" value="@ViewData["Guid"]" />
+            @Html.ValidationMessage("recipeImg", "", new { @class = "text-danger" })
             <div class="form_img">
                 <div class="img_content" id="img_content">
                     <p>Upload food photos of your recipe (If available)</p>
@@ -21,24 +26,28 @@
                 </div>
                 <!-- IMG here -->
                 <div class="btt_file">
-                    <input type="file" id="import_form" accept="image/*" name="img">
+                    <input type="file" id="import_form" accept="image/*" name="recipeImg">
                     <label for="import_form" class="lb_import"><i class="fa-solid fa-arrow-up-from-bracket"></i> Upload file</label>
                 </div>
             </div>
             <div class="form_info">
                 <div class="info_name">
                     <p>Enter your full name</p>
-                    <input type="text" id="recipe_name" name="fullname" class="input_name" placeholder="Your fullname" name="fullname">
+                    <input type="text" id="recipe_name" class="input_name" placeholder="Your fullname" name="fullname">
+                    @Html.ValidationMessageFor(model => model.Fullname, "", new { @class = "text-danger" })
                 </div>
                 <div class="info_name">
                     <p>Enter your email</p>
-                    <input type="text" id="recipe_name" name="email" class="input_name" placeholder="Your email" name ="email">
+                    <input type="text" id="recipe_name"class="input_name" placeholder="Your email" name="email">
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
                 <div class="info_name">
                     <p>Enter recipe title</p>
-                    <input type="text" id="recipe_name" name="recipe_name" class="input_name" placeholder="Recipe title" name="title">
+                    <input type="text" id="recipe_name" class="input_name" placeholder="Recipe title" name="title">
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
                 <br />
+                @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
                 <div id="summernote"></div>
             </div>
             <button type="submit" class="submit">Submit</button>
@@ -52,6 +61,7 @@
     <script src="~/js/upload_recipe.js"></script>
     <script>
         $(document).ready(function () {
+            var submitClicked = false;
             $('#summernote').summernote({
                 placeholder: 'Hello stand alone ui',
                 tabsize: 2,
@@ -67,14 +77,14 @@
                     ['insert', ['link', 'picture']],
                     ['view', ['fullscreen', 'help']]
                 ],
-                styleTags: ['p','h1', 'h2', 'h3', 'h4', 'h5', 'h6'],
-                // callbacks: {
-                //     onImageUpload: function (files) {
-                //         for (var i = 0; i < files.length; i++) {
-                //             uploadImage(files[i]);
-                //         }
-                //     }
-                // }
+                styleTags: ['p', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6'],
+                callbacks: {
+                    onImageUpload: function (files) {
+                        for (var i = 0; i < files.length; i++) {
+                            uploadImage(files[i]);
+                        }
+                    }
+                }
 
             });
             $('div.note-group-image-url').remove();
@@ -86,11 +96,11 @@
             function uploadImage(file) {
                 var formData = new FormData();
                 formData.append("uploadedFiles", file);
-                formData.append("guid", $('#postForm input[name=guid]').val()); // Truyền GUID trong yêu cầu POST
+                formData.append("guid", $('#uploadForm input[name=guid]').val());
                 $.ajax({
                     data: formData,
                     type: "POST",
-                    url: '/Home/UploadFile',
+                    url: '/Recipe/UploadFile',
                     cache: false,
                     contentType: false,
                     processData: false,
@@ -105,16 +115,33 @@
                     }
                 });
             }
-            $('form').on('submit', function (event) {
+
+
+            $('#uploadForm').on('submit', function (event) {
+                submitClicked = true;
                 $('<input>').attr({
                     type: 'hidden',
                     name: 'content',
                     value: $('#summernote').summernote('code')
-                }).appendTo('#postForm');
-                alert($('#summernote').summernote('code'));
+                }).appendTo('#uploadForm');
+              
             });
 
 
+
+
+
+            $(window).on('beforeunload', function () {
+                if (!submitClicked) {
+                    var guid = $('#uploadForm input[name=guid]').val();
+                    if (guid) {
+                        var data = JSON.stringify({ guid: guid });
+                        var blob = new Blob([data], { type: 'application/json' });
+                        navigator.sendBeacon('/Recipe/DeleteTempImages', blob);
+                        console.log('Image deletion request sent for GUID:', guid);
+                    }
+                }
+            });
 
 
         });
