--- a/EProjet.NETCore/Views/Recipe/upload_recipe.cshtml
+++ b/EProjet.NETCore/Views/Recipe/upload_recipe.cshtml
@@ -33,17 +33,17 @@
             <div class="form_info">
                 <div class="info_name">
                     <p>Enter your full name</p>
-                    <input type="text" id="recipe_name" class="input_name" placeholder="Your fullname" name="fullname">
+                    <input type="text" id="recipe_name" class="input_name" placeholder="Your fullname" name="fullname" value="@ViewData["Fullname"]">
                     @Html.ValidationMessageFor(model => model.Fullname, "", new { @class = "text-danger" })
                 </div>
                 <div class="info_name">
                     <p>Enter your email</p>
-                    <input type="text" id="recipe_name"class="input_name" placeholder="Your email" name="email">
+                    <input type="text" id="recipe_name" class="input_name" placeholder="Your email" name="email" value="@ViewData["Email"]">
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
                 <div class="info_name">
                     <p>Enter recipe title</p>
-                    <input type="text" id="recipe_name" class="input_name" placeholder="Recipe title" name="title">
+                    <input type="text" id="recipe_name" class="input_name" placeholder="Recipe title" name="title" value="@ViewData["Title"]">
                     @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
                 <br />
@@ -92,6 +92,7 @@
             newCss.backgroundColor = '#333';
             newCss.color = '#fff';
             $('.note-editable').css(newCss);
+            $('#summernote').summernote('code', `@Html.Raw(ViewData["Content"])`);
 
             function uploadImage(file) {
                 var formData = new FormData();
