PagedList của Tip/Recipe/Competition, Search/Filter của Tip/Recipe, css cho PageList ( Tải thư viện X.PagedList và X.PagedList.Mvc.Core )

--- a/EProjet.NETCore/Views/Shared/_Layout.cshtml
+++ b/EProjet.NETCore/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
             </div>
         </div>
     </section>
+    <script src="~/js/navbar.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
