--- a/EProjet.NETCore/Views/Tip/tip.cshtml
+++ b/EProjet.NETCore/Views/Tip/tip.cshtml
@@ -1,6 +1,6 @@
 ﻿@using X.PagedList.Mvc.Core
 @using X.PagedList
-@model X.PagedList.IPagedList<EProjet.NETCore.Models.Recipe>
+@model X.PagedList.IPagedList<EProjet.NETCore.Models.Tip>
 @{
 }
 @section Styles {
@@ -9,10 +9,10 @@
 <section class="recipe">
     <div class="recipe_head">
         <div class="recipe_head_name">
-            <h1>Recipes</h1>
+            <h1>Tips</h1>
         </div>
         <div class="recipe_search">
-            <form action="/recipe/search" method="get">
+            <form action="/tip/search" method="get">
                 <label for="input_search">Search:</label>
                 <input type="text" id="input_search" name="input_search" class="input_search" placeholder="Search...." value="@ViewBag.InputSearch">
 
@@ -30,19 +30,19 @@
         <div class="recipe_list">
             @if (Model != null && Model.Any())
             {
-                @foreach (var recipe in Model)
+                @foreach (var tip in Model)
                 {
                     <div class="item_recipe">
                         <a href="" class="link_recipe">
                             <div class="menu_card">
                                 <div class="menu_image">
-                                    <img src="@recipe.Img">
+                                    <img src="@tip.Img">
                                 </div>
                                 <div class="small_card">
                                     <p class="small_vip"><i class="fa-solid fa-check"></i></p>
                                 </div>
                                 <div class="menu_info">
-                                    <p>@recipe.Title</p>
+                                    <p>@tip.Title</p>
                                 </div>
                             </div>
                         </a>
