Phân lại vùng lưu ảnh riêng cho recipe , tip , competition và làm hiển thị chi tiết recipe

--- a/EProjet.NETCore/Views/Recipe/recipe.cshtml
+++ b/EProjet.NETCore/Views/Recipe/recipe.cshtml
@@ -33,7 +33,7 @@
                 @foreach (var recipe in Model)
                 {
                     <div class="item_recipe">
-                        <a href="" class="link_recipe">
+                        <a href="@Url.Action("RecipeDetail", "Recipe", new { id = @recipe.Id })" class="link_recipe">
                             <div class="menu_card">
                                 <div class="menu_image">
                                     <img src="@recipe.Img">
